tests/ui/concurrent_cached_async_requires_async_feature.rs
use cached::concurrent_cached;

#[concurrent_cached]
async fn async_concurrent_without_feature() -> Result<i32, ()> {
    Ok(42)
}

fn main() {}
